--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,43 @@
 server:
   port: 8888
+
+app.public-base-url: http://127.0.0.1:8888
+
+spring:
+  datasource:
+    hikari:
+      maximum-pool-size: 4
+      minimum-idle: 4
+      connection-timeout: 30_000
+      max-lifetime: 1_800_000
+      auto-commit: false
+  jpa:
+    show-sql: false
+    open-in-view: false
+    properties:
+      hibernate:
+        jdbc:
+          time_zone: UTC
+          batch_size: 15
+          fetch_size: 15
+          order_inserts: true
+          order_updates: true
+          connection.provider_disables_autocommit: true
+        query:
+          in_clause_parameter_padding: true
+          fail_on_page_variable_overflow: true
+          plan_cache_max_size: 4096
+        default_schema: public
+    hibernate:
+      ddl-auto: update
+  docker:
+    compose:
+      lifecycle-management: start_only
+
+jwt:
+  secret: "your_jwt_secret_key_here"
+  issuer: toroid
+  access-token-expires-in: P15D
+  refresh-token-expires-in: P15D
+  public-key: classpath:keys/public_key.pem
+  private-key: classpath:keys/private_key.pem
