--- a/compose.yml
+++ b/compose.yml
@@ -17,7 +17,12 @@ services:
       - "6379"
     volumes:
       - redis-data:/data
-
+  open-telemetry:
+    image: grafana/otel-lgtm
+    ports:
+      - "3000:3000"
+      - "4317"
+      - "4318"
 volumes:
   postgres-data:
   redis-data:
